--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       src="https://kit.fontawesome.com/bef04441f7.js"
       crossorigin="anonymous"
     ></script>
-    <title>Document</title>
+    <title>Arif Karaçalıoğlu</title>
   </head>
   <body>
     <div class="container">
