--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <meta name="google-site-verification" content="jbv9EVg6_WbtrzmUudh1qG0JIGyId1rmVGBgyvuVhBY" />
     <script
       src="https://kit.fontawesome.com/bef04441f7.js"
       crossorigin="anonymous"
