--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta
+      name="description"
+      content="Bilgisayar mühendisliği öğrencisi, Android geliştirici"
+    />
+    <meta
+      name="keywords"
+      content="bilgisayar mühendisliği, java, android"
+    />
+    <meta name="author" content="Arif Karaçalıoğlu" />
+    
+    
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/style.css" />
     <meta name="google-site-verification" content="jbv9EVg6_WbtrzmUudh1qG0JIGyId1rmVGBgyvuVhBY" />
